plugins {
    id 'java'
    id 'application'
}

group = 'io.easystartup'
version = '1.0'

sourceCompatibility = 21
targetCompatibility = 21

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.16.1'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.16.1'

    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'commons-net', name: 'commons-net', version: '3.10.0'

    implementation files('libs/hetznercloud-api-3.2.0.jar')

    implementation group: 'com.hubspot.jinjava', name: 'jinjava', version: '2.7.1'

//    implementation "me.tomsdevsn:hetznercloud-api:3.1.0"

    // Command line arg processor
    implementation 'info.picocli:picocli:4.7.5'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.5'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}
jar {
    archiveBaseName = 'k3s-simplifier'
    duplicatesStrategy = "exclude"
    archiveClassifier = "all"
    manifest {
        attributes(
                'Main-Class': 'io.easystartup.Main'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}